Change .visualizationContainer height to auto to fix animation aspect ratio problem on smaller screens

--- a/app/styles/AllExerciseCards.module.scss
+++ b/app/styles/AllExerciseCards.module.scss
@@ -118,15 +118,10 @@
   visibility: visible;
 }
 
-// .visualizationContainer {
-//   display: flex;
-//   padding: 10px;
-// }
-
 .visualizationContainer {
   display: flex;
   padding: 10px;
-  height: 380px;
+  height: auto;
   justify-content: center;
   align-items: center;
   overflow: hidden;
